Switch a gift order and make the reset button have an active effect

--- a/rsrc/styles/default.css
+++ b/rsrc/styles/default.css
@@ -115,6 +115,10 @@ body {
 	background-image: linear-gradient(to bottom right, red, lightpink);
 }
 
+#slot-machine-light:active {
+	background-image: linear-gradient(to top left, red, lightpink);
+}
+
 .slot-machine-light-alarm {
 	animation-name: slot-machine-light-alarm;
 	animation-duration: 0.3s;
