Supporting multiple years

--- a/2022/rsrc/styles/default.css
+++ b/2022/rsrc/styles/default.css
@@ -4,7 +4,7 @@
 
 :root {
 	/* background-color: blanchedalmond; */
-	background-image: url('/rsrc/images/painted-shed.jpeg');
+	background-image: url('../images/painted-shed.jpeg');
 	background-position: center bottom;
 	background-size: cover;
 	display: flex;
@@ -152,7 +152,7 @@ body {
 }
 
 #slot-machine-top {
-	background-image: url('/rsrc/images/flowery-card.jpg');
+	background-image: url('../images/flowery-card.jpg');
 	background-size: 100% 200%;
 	border-left: 0.5em solid black;
 	border-right: 0.5em solid black;
@@ -183,7 +183,7 @@ body {
 }
 
 #slot-machine-body {
-	background-image: url('/rsrc/images/metal-abstract.jpg');
+	background-image: url('../images/metal-abstract.jpg');
 	background-position: center;
 	background-size: cover;
 	border-left: 0.5em solid black;
@@ -239,7 +239,7 @@ body {
 }
 
 #slot-machine-bottom {
-	background-image: url('/rsrc/images/flowery-card.jpg');
+	background-image: url('../images/flowery-card.jpg');
 	background-position-y: -100%;
 	background-size: 100% 200%;
 	border-bottom: 0.5em solid black;
