Just a new background image for style

--- a/2024/rsrc/styles/default.css
+++ b/2024/rsrc/styles/default.css
@@ -1,6 +1,9 @@
 html,
 body {
   background-color: pink;
+  background-image: url("../images/pink-sunset.webp");
+  background-position: center;
+  background-size: cover;
   height: 100%;
   margin: 0;
   position: fixed;
